[package]
name = "v9_router"
version = "0.1.0"
authors = ["Pat Cody <patcody028@gmail.com>"]
license = "MIT"
description = "Router application for the Velocity 9 serverless platform"
repository = "https://github.com/velocity-9/v9_router"
keywords = ["cloud", "rust", "serverless"]
categories = ["serverless"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { version = "0.1.5", features = ["derive"]}
flexi_logger = "0.14.3"
hyper = "0.12.35"
log = "0.4.8"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = "0.9.22"
